Fix bug + import nodemon

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "GPL-3.0-or-later",
   "private": false,
   "scripts": {
-    "dev": "node --inspect=localhost:9219 index.js"
+    "dev": "nodemon -- --inspect=localhost:9219 index.js"
   },
   "dependencies": {
     "fs-jetpack": "^4.1.0",
@@ -20,6 +20,7 @@
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1"
+    "eslint-plugin-promise": "^4.2.1",
+    "nodemon": "^2.0.14"
   }
 }
